# MatchingEngine

./: .gitignore  CMakeLists.txt  Order.h  OrderTypes.h  README.md  main.cpp
OrderBook/: OrderBook.cpp  OrderBook.h
OrderTracker/: OrderTracker.cpp  OrderTracker.h  PriceTracker.cpp  PriceTracker.h
docs/: OrderType.md
